--- a/style.css
+++ b/style.css
@@ -20,24 +20,282 @@ body {
   height: 100%;
 }
 
-/* HEADER STYLES */
-
-.mobile {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  align-items: center;
-  padding: 0.8rem;
+.main {
+  overflow-y: scroll;
+  overflow-x: hidden;
+  padding: 50px;
+  padding-inline: 100px;
 }
 
-.mobile #toggle {
+/* HEADER STYLES */
+
+header {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
+  background: hsl(36, 100%, 99%);
+}
+
+.hambuger{
   display: none;
 }
 
-.mobile #toggle .buttonContainer {
+.nav_bar_desktop {
+  font-weight: 400;
+  width: 40vw;
+}
+
+.nav_bar_desktop ul {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+.nav_bar_desktop li {
+  list-style: none;
+}
+
+.nav_bar_desktop a {
+  color: hsl(240, 100%, 5%);
+  text-decoration: none;
+  font-size: 20px;
+}
+
+.nav_bar_desktop a:hover{
+  color: hsl(35, 77%, 62%);
+}
+
+.hero_section{
   display: flex;
   justify-content: center;
-  flex-direction: column;
-  color: #000000;
+  gap: 20px;
+  margin-top: 30px; 
+}
+
+.mobile{
+  display: none;
+}
+
+.desktop{
   width: 100%;
+  height: auto;
+}
+.left_container{
+  display: flex;
+  align-items: center;
+}
+
+.left_container h1{
+  font-size: 48px;
+  font-weight: 700;
+}
+
+.text_right p{
+  font-size: 15px;
+  font-weight: 400;
+  margin-top: 16px;
+}
+
+.text_right button{
+  background-color: hsl(5, 85%, 63%);
+  color: hsl(36, 100%, 99%);
+  padding: 10px 20px;
+  border: none;
+  cursor: pointer;
+  text-transform: uppercase;
+  margin-top: 40px;
+}
+
+.right_container .box{
+  justify-content: center;
+  align-content: center;
+  background-color: hsl(240, 100%, 5%);
+  color: hsl(36, 100%, 99%);
+  padding: 20px;
+  padding-block: 30px;
+}
+
+
+.text{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-top: 15px;
+}
+
+.text_right p{
+  font-size: 18px;
+  color: hsl(236, 13%, 42%);
+  line-height: 1.5;
+  max-width: 80ch;
+}
+
+.right_container h2{
+  color:hsl(35, 77%, 62%);
+  font-size: 40px;
+  margin-bottom: 30px;
+}
+
+.right_container .link{
+  font-weight: 700;
+  text-decoration: none;
+  color:hsl(36, 100%, 99%);
+  font-size: 25px;
+  margin-bottom: 20px;
+}
+
+.right_container .link:hover{
+  color:hsl(35, 77%, 62%);
+}
+
+.right_container p{
+  color: hsl(233, 8%, 79%);
+  margin-top: 15px;
+} */
+
+.footer_section{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-top: 20px;
+}
+ 
+.footer_section {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  float: left;
+  margin-right: 20px;
+  margin-top: 20px;
+  padding-block: 20px;
+}
+
+.footer_section img{
+  width: 100%;
+  max-width: 8rem;
+  height: auto;
+  margin-right: 40px;
+}
+
+.flex_box{
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  gap: 8px;
+}
+
+.container{
+   flex: 1; 
+   display: flex;
+   justify-content: space-around;
+   flex-direction: column;
+   /* margin-right: 0px; */
+   gap: 10px; 
+}
+
+.container p{
+  font-size: 15px;
+}
+
+.bottom_link{
+  font-size: 18px;
+  font-weight: 700;
+  text-decoration: none;
+  color:hsl(240, 100%, 5%)
+  
+}
+
+.bottom_link:hover{
+  color: hsl(35, 77%, 62%);
+}
+
+@media (max-width:768px) {
+
+  .main {
+    padding: 20px;
+  }
+  header{
+    display: block;
+    margin-top: 0;
+    
+  }
+  .header_img{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .hambuger{
+    display: block;
+  }
+  .nav_bar_desktop{
+    display: none; 
+  }
+  .nav_bar_mobile{
+    position: fixed;
+    width: 250px;
+    height: 100vh;
+    background: hsl(36, 100%, 99%);
+    transform: translateX(100%); 
+  }
+
+  .hero_section .desktop{
+    display: none;
+  }
+  .hero_section .mobile{
+    display: block;
+    width: 100%;
+  }
+
+  .hambuger .open{
+    display: block;
+  }
+
+  .hambuger .close{
+    display: none;
+  }
+
+
+  .hero_section{
+    display: block;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 20px; 
+    margin-top: 30px;
+  }
+
+  .left_container{
+    display: flex;
+    flex-direction: column;
+  }
+
+
+  .text{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+  }
+
+  .text_right{
+    margin-block: 20px;
+  }
+
+  
+}
+
+@media (max-width: 768px) {
+  .footer_section{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+  }
+  .flex_box {
+    display: flex;
+    /* flex-direction: column; */
+    justify-content: center;
+    margin-right: 30px;
+  }
+  
+  
 }
